--- a/power/src/app/fragebogen/editor/modal-formular/modal-formular.component.html
+++ b/power/src/app/fragebogen/editor/modal-formular/modal-formular.component.html
@@ -122,7 +122,7 @@
                         <hr>
                         Sichtbarkeitsbedingung
                         <br>
-                        <app-conditions [(data)]="storage.model.pages[i].visibleIf"></app-conditions>
+                        <power-formulars-editor-conditions [(data)]="storage.model.pages[i].visibleIf"></power-formulars-editor-conditions>
                     </form>
                 </div>
             </div>
