Added temporary landing page for fragebogen

--- a/power/src/app/fragebogen/home/home.component.html
+++ b/power/src/app/fragebogen/home/home.component.html
@@ -1,2 +1,7 @@
 <!-- landing page -->
-Coming soon...
+<main class="mainpage" id="content" tabindex="-1">
+    <h2>Coming soon...</h2>
+    <br><a title="Dashboard öffnen" [routerLink]="['/formulare/dashboard']">Dashboard</a>
+    <br><a title="Editor öffnen" [routerLink]="['/formulare/editor']">Editor</a>
+    <br><a title="Ausfüllen öffnen" [routerLink]="['/formulare/formular']">Ausfüllen</a>
+</main>
