--- a/power/src/app/app.component.html
+++ b/power/src/app/app.component.html
@@ -2,21 +2,40 @@
   <nav class="navbar navbar-light navbar-expand-md border-bottom bg-white fixed-top">
     <a class="navbar-brand" href="#" style="color:#343a40">
       <img src="/assets/logos/logo.png" height="20" class="mr-2 align-top">
-      <strong class="d-none d-md-inline">Portal für Wertermittlung<span *ngIf="name"> - {{name}}</span><span
-        style="color:#c4153a">.niedersachsen</span></strong>
-      <strong class="d-md-none"><span *ngIf="!name">POWER</span>{{name}}<span
-        style="color:#c4153a">.niedersachsen</span></strong>
+      <strong class="d-none d-md-inline">
+        <span>Portal für Wertermittlung</span>
+        <span *ngIf="name"> - {{name}}</span>
+        <span style="color:#c4153a">.niedersachsen</span>
+      </strong>
+      <strong class="d-md-none">
+        <span *ngIf="!name">POWER</span>
+        <span>{{name}}</span>
+        <span style="color:#c4153a">.niedersachsen</span>
+      </strong>
     </a>
-
-    <button class="navbar-toggler" style="border: none; padding-right: 0px;" type="button"
+    <button class="navbar-toggler" style="border: none; padding-right: 0;" type="button"
             (click)="isCollapsed = !isCollapsed" [attr.aria-expanded]="!isCollapsed" [class.active]="!isCollapsed">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" style="z-index: 2000" [ngbCollapse]="isCollapsed">
       <ul class="navbar-nav ml-auto">
-        <li class="nav-item" *ngFor="let page of pages">
-          <a class="nav-link" (click)="isCollapsed=!isCollapsed" [routerLink]="[page.link]"
-             [routerLinkActive]="['active']">{{page.name}}</a>
+        <li class="nav-item">
+          <a class="nav-link" (click)="isCollapsed=!isCollapsed" routerLink="/bodenrichtwerte" routerLinkActive="active">Bodenrichtwerte</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" (click)="isCollapsed=!isCollapsed" routerLink="/bodenwertkalkulator" routerLinkActive="active">Bodenwert-Kalkulator</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" (click)="isCollapsed=!isCollapsed" routerLink="/immobilienpreisindex" routerLinkActive="active">Immobilien</a>
+        </li>
+        <li class="nav-item" ngbDropdown>
+          <a class="nav-link" ngbDropdownToggle>Formulare</a>
+          <div ngbDropdownMenu>
+            <a ngbDropdownItem routerLink="/formulare" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">Überblick</a>
+            <a ngbDropdownItem routerLink="/formulare/dashboard" routerLinkActive="active">Dashboard</a>
+            <a ngbDropdownItem routerLink="/formulare/editor" routerLinkActive="active">Editor</a>
+            <a ngbDropdownItem routerLink="/formulare/formular" routerLinkActive="active">Ausfüllen</a>
+          </div>
         </li>
       </ul>
     </div>
@@ -24,29 +43,9 @@
 
   <router-outlet></router-outlet>
 
-  <div class="container">
+  <div class="container-fluid">
     <footer class="pt-4 my-md-5 pt-md-5 border-top w-100 m-0 overflow-hidden">
       <div class="row justify-content-around">
-<!--        <div class="col-md-4 text-center">-->
-<!--          <h5>Features</h5>-->
-<!--          <ul class="list-unstyled text-small">-->
-<!--            <li><a class="text-muted" href="#">Cool stuff</a></li>-->
-<!--            <li><a class="text-muted" href="#">Random feature</a></li>-->
-<!--            <li><a class="text-muted" href="#">Team feature</a></li>-->
-<!--            <li><a class="text-muted" href="#">Stuff for developers</a></li>-->
-<!--            <li><a class="text-muted" href="#">Another one</a></li>-->
-<!--            <li><a class="text-muted" href="#">Last time</a></li>-->
-<!--          </ul>-->
-<!--        </div>-->
-<!--        <div class="col-md-4 text-center">-->
-<!--          <h5>Resources</h5>-->
-<!--          <ul class="list-unstyled text-small">-->
-<!--            <li><a class="text-muted" href="#">Resource</a></li>-->
-<!--            <li><a class="text-muted" href="#">Resource name</a></li>-->
-<!--            <li><a class="text-muted" href="#">Another resource</a></li>-->
-<!--            <li><a class="text-muted" href="#">Final resource</a></li>-->
-<!--          </ul>-->
-<!--        </div>-->
         <div class="col-md-4 text-center">
           <h5>Informationen</h5>
           <ul class="list-unstyled text-small">
@@ -59,4 +58,3 @@
     </footer>
   </div>
 </div>
-<!--</div>-->
