--- a/power/src/app/fragebogen/editor/editor.component.html
+++ b/power/src/app/fragebogen/editor/editor.component.html
@@ -1,4 +1,4 @@
-<main class="row w-100 m-0" id="content" tabindex="-1">
+<main class="row w-100 m-0 mt-4" id="content" tabindex="-1">
     <!-- left side -->
     <div class="col-12 col-lg-3 col-xl-2 p-2">
         <!-- toolbox -->
