--- a/power/src/app/fragebogen/formular/formular.component.html
+++ b/power/src/app/fragebogen/formular/formular.component.html
@@ -1,4 +1,5 @@
-<div class="col-md-5 mx-auto mt-3 mb-5">
+<div class="col-md-5 mx-auto mt-4 mb-5">
+  <h3>Formular ausfüllen</h3>
   <p>Bitte geben Sie hier Ihre Kauffalldaten ein:</p>
   <form (ngSubmit)="onSubmit(pin.value)">
     <div class="form-group">
