--- a/power/src/app/fragebogen/home/home.component.html
+++ b/power/src/app/fragebogen/home/home.component.html
@@ -1,7 +1,9 @@
 <!-- landing page -->
-<main class="mainpage" id="content" tabindex="-1">
-    <h2>Coming soon...</h2>
-    <br><a title="Dashboard öffnen" [routerLink]="['/formulare/dashboard']">Dashboard</a>
-    <br><a title="Editor öffnen" [routerLink]="['/formulare/editor']">Editor</a>
-    <br><a title="Ausfüllen öffnen" [routerLink]="['/formulare/formular']">Ausfüllen</a>
+<main class="mainpage mt-4" id="content" tabindex="-1">
+  <h2>Überblick</h2>
+  <ul>
+    <li><a title="Dashboard öffnen" routerLink="/formulare/dashboard">Dashboard</a></li>
+    <li><a title="Editor öffnen" routerLink="/formulare/editor">Editor</a></li>
+    <li><a title="Ausfüllen öffnen" routerLink="/formulare/formular">Ausfüllen</a></li>
+  </ul>
 </main>
