Fixed Routing for Geoserver, Deleted App-Nameservice

--- a/power/src/app/app.component.html
+++ b/power/src/app/app.component.html
@@ -4,12 +4,10 @@
       <img src="/assets/logos/logo.png" height="20" class="mr-2 align-top">
       <strong class="d-none d-md-inline">
         <span>Portal für Wertermittlung</span>
-        <span *ngIf="name"> - {{name}}</span>
         <span style="color:#c4153a">.niedersachsen</span>
       </strong>
       <strong class="d-md-none">
-        <span *ngIf="!name">POWER</span>
-        <span>{{name}}</span>
+        <span>POWER</span>
         <span style="color:#c4153a">.niedersachsen</span>
       </strong>
     </a>
