Fixes AppComponent should render title in a strong tag

--- a/power/src/app/app.component.html
+++ b/power/src/app/app.component.html
@@ -3,7 +3,7 @@
     <a class="navbar-brand" href="#" style="color:#343a40">
       <img src="/assets/logos/logo.png" height="20" class="mr-2 align-top">
       <strong class="d-none d-md-inline">
-        <span>Portal für Wertermittlung</span>
+        Portal für Wertermittlung
         <span style="color:#c4153a">.niedersachsen</span>
       </strong>
       <strong class="d-md-none">
