--- a/power/src/app/fragebogen/editor/editor.component.html
+++ b/power/src/app/fragebogen/editor/editor.component.html
@@ -187,3 +187,6 @@
 
 <!-- preview -->
 <power-formulars-editor-preview #preview></power-formulars-editor-preview>
+
+<!-- alerts component -->
+<power-alerts></power-alerts>
