--- a/power/src/app/fragebogen/editor/editor.component.html
+++ b/power/src/app/fragebogen/editor/editor.component.html
@@ -190,3 +190,6 @@
 
 <!-- alerts component -->
 <power-alerts></power-alerts>
+
+<!-- loadingscreen component -->
+<power-loadingscreen></power-loadingscreen>
