--- a/power/src/app/fragebogen/dashboard/dashboard.component.html
+++ b/power/src/app/fragebogen/dashboard/dashboard.component.html
@@ -11,20 +11,20 @@
         <thead>
         <tr>
           <th scope="col" class="border-top-0 w-75">Titel</th>
-          <th scope="col" class="border-top-0">Version</th>
-          <th scope="col" class="border-top-0">Datum</th>
+          <th scope="col" class="border-top-0">Erstellt</th>
+          <th scope="col" class="border-top-0">Aktualisiert</th>
           <th scope="col" class="border-top-0"></th>
         </tr>
         </thead>
         <tbody>
         <tr *ngFor="let form of formsList; index as i">
           <td scope="row">
-            <a title="Formular öffnen" [routerLink]="['/editor', form.id]">
+            <a title="Formular öffnen" [routerLink]="['/formulare/editor', form.id]">
               {{ form.title }}
             </a>
           </td>
-          <td>{{ form.version }}</td>
-          <td>{{ form.created_at | date:'dd.MM.yyyy HH:mm' }}</td>
+          <td>{{ form.created | date:'dd.MM.yyyy HH:mm' }}</td>
+          <td>{{ form.updated | date:'dd.MM.yyyy HH:mm' }}</td>
           <td>
             <button type="button"
                     class="btn btn-success btn-sm"
