--- a/power/src/app/fragebogen/editor/editor.component.html
+++ b/power/src/app/fragebogen/editor/editor.component.html
@@ -76,16 +76,16 @@
                 <button type="button"
                     class="btn btn-secondary mr-2"
                     title="Letzte Änderung wiederholen"
-                    (click)="history.RedoChanges(); ClearCollapsed()"
-                    [disabled]="history.RedoIndex === 0">
+                    (click)="history.redoChanges(); clearCollapsed()"
+                    [disabled]="history.redoIndex === 0">
                     <i class="fas fa-redo" aria-hidden="true"></i>
                     <span class="sr-only">Letzte Änderung wiederholen</span>
                 </button>
                 <button type="button"
                     class="btn btn-secondary mr-2"
                     title="Letzte Änderung rückgängig machen"
-                    (click)="history.UndoChanges(); ClearCollapsed()"
-                    [disabled]="history.UndoIndex === 0">
+                    (click)="history.undoChanges(); clearCollapsed()"
+                    [disabled]="history.undoIndex === 0">
                     <i class="fas fa-undo" aria-hidden="true"></i>
                     <span class="sr-only">Letzte Änderung rückgängig machen</span>
                 </button>
