Updated dependencies, fixed a lot of stuff in fragebogen

--- a/power/src/app/fragebogen/fragebogen.css
+++ b/power/src/app/fragebogen/fragebogen.css
@@ -51,6 +51,11 @@
     display: none;
 }
 
+/* disable padding around questions */
+.sv_qstn {
+    padding: 0px !important;
+}
+
 /* matrix: remove word wrap */
 th, td {
     white-space: nowrap;
