--- a/power/src/styles.scss
+++ b/power/src/styles.scss
@@ -1,7 +1,8 @@
 /*!* You can add global styles to this file, and also import other style files *!*/
 /*// @import "theme.scss";*/
 @import "~bootstrap/scss/bootstrap.scss";
-@import "~font-awesome/css/font-awesome.css";
+@import "webfonts/fontawesome.css";
+@import "~nouislider/distribute/nouislider.css";
 @import "~mapbox-gl/dist/mapbox-gl.css";
 @import "app/fragebogen/fragebogen.css";
 
