--- a/power/src/app/app.component.html
+++ b/power/src/app/app.component.html
@@ -3,7 +3,7 @@
     <a class="navbar-brand" href="#" style="color:#343a40">
       <img src="/assets/logos/logo.png" height="20" class="mr-2 align-top">
       <strong class="d-none d-md-inline">
-        Portal für Wertermittlung
+        <span>Portal für Wertermittlung</span>
         <span style="color:#c4153a">.niedersachsen</span>
       </strong>
       <strong class="d-md-none">
@@ -17,11 +17,6 @@
     </button>
     <div class="collapse navbar-collapse" style="z-index: 2000" [ngbCollapse]="isCollapsed">
       <ul class="navbar-nav ml-auto">
-
-<!--        <li class="nav-item" *ngFor="let module of modules">
-          <a class="nav-link" (click)="isCollapsed=!isCollapsed" routerLink="" routerLinkActive="active">{{module}}</a>
-        </li>-->
-
         <li class="nav-item" *ngIf="config.modules.includes('bodenrichtwerte')">
           <a class="nav-link" (click)="isCollapsed=!isCollapsed" routerLink="/bodenrichtwerte" routerLinkActive="active">Bodenrichtwerte</a>
         </li>
