Added new components

--- a/power/src/app/app.component.html
+++ b/power/src/app/app.component.html
@@ -27,7 +27,7 @@
           <a class="nav-link" (click)="isCollapsed=!isCollapsed" routerLink="/immobilienpreisindex" routerLinkActive="active">Immobilien</a>
         </li>
         <li class="nav-item" *ngIf="config.modules.includes('fragebogen')">
-          <a class="nav-link" (click)="isCollapsed=!isCollapsed" routerLink="/formulare" routerLinkActive="active">Formulare</a>
+          <a class="nav-link" (click)="isCollapsed=!isCollapsed" routerLink="/forms" routerLinkActive="active">Formulare</a>
         </li>
       </ul>
     </div>
