--- a/power/src/app/fragebogen/fillout/fillout.component.html
+++ b/power/src/app/fragebogen/fillout/fillout.component.html
@@ -1,7 +1,7 @@
 <!-- landing page -->
 <main class="container mt-4" id="content" tabindex="-1" *ngIf="storage.form">
   <power-formulars-surveyjs-wrapper [model]="storage.form.content" [css]="storage.css_style"
-    (result)="submit($event)" (interimResult)="progress($event)">
+    (result)="submit($event)" (interimResult)="progress($event)" (changes)="changed($event)">
   </power-formulars-surveyjs-wrapper>
 </main>
 
