Moved alerts and loadingscreen into shared modules

--- a/power/src/app/app.component.html
+++ b/power/src/app/app.component.html
@@ -50,3 +50,9 @@
     </footer>
   </div>
 </div>
+
+<!-- alerts component -->
+<power-alerts></power-alerts>
+
+<!-- loadingscreen component -->
+<power-loadingscreen></power-loadingscreen>
