--- a/power/src/app/fragebogen/dashboard/dashboard.component.html
+++ b/power/src/app/fragebogen/dashboard/dashboard.component.html
@@ -20,7 +20,7 @@
         <tbody>
         <tr *ngFor="let form of formsList; index as i">
           <td scope="row">
-            <a title="Formular öffnen" [routerLink]="['/forms/editor', form.id]">
+            <a title="Formular öffnen" [routerLink]="['/forms/details', form.id]">
               {{ form.title }}
             </a>
           </td>
@@ -64,9 +64,3 @@
     </div>
   </div>
 </main>
-
-<!-- alerts component -->
-<power-alerts></power-alerts>
-
-<!-- loadingscreen component -->
-<power-loadingscreen></power-loadingscreen>
