--- a/power/src/app/fragebogen/details/details.component.html
+++ b/power/src/app/fragebogen/details/details.component.html
@@ -1,4 +1,63 @@
-<!-- landing page -->
-<main class="container mt-4" id="content" tabindex="-1">
-	Hi!
+<!-- details page -->
+<main class="mainpage" id="content" tabindex="-1">
+	<!-- title -->
+	<h4 *ngIf="storage.form">{{ storage.form.title }}</h4>
+
+	<!-- form details -->
+	<div class="row mb-4" *ngIf="storage.form">
+		<div class="col-12 col-lg-6">
+			ID: {{ storage.form.id }}
+			<br>Tags: {{ storage.form.tags }}
+		</div>
+		<div class="col-12 col-lg-6">
+			Erstellt: {{ storage.form.created | date:'dd.MM.yyyy HH:mm:ss' }}
+			<br>Aktualisiert: {{ storage.form.created | date:'dd.MM.yyyy HH:mm:ss' }}
+		</div>
+	</div>
+
+	<!-- tasks list -->
+	<div class="card bg-light">
+		<div class="card-header h5">
+			<i class="fas fa-list fa-fw" aria-hidden="true"></i>
+			Antworten
+		</div>
+		<div class="card-body table-responsive p-0">
+			<table class="table table-hover m-0">
+				<thead>
+					<tr>
+						<th scope="col" class="border-top-0">PIN</th>
+						<th scope="col" class="border-top-0">Abgeschlossen</th>
+						<th scope="col" class="border-top-0">Erstellt</th>
+						<th scope="col" class="border-top-0">Aktualisiert</th>
+						<th scope="col" class="border-top-0 w-50"></th>
+					</tr>
+				</thead>
+				<tbody>
+					<tr *ngFor="let task of storage.tasksList; index as i">
+						<td scope="row">{{ task.pin }}</td>
+						<td></td>
+						<td>{{ task.created | date:'dd.MM.yyyy HH:mm' }}</td>
+						<td>{{ task.updated | date:'dd.MM.yyyy HH:mm' }}</td>
+						<td>
+							<button type="button" class="btn btn-danger btn-sm" id="button-delete" title="Antwort löschen"
+									(click)="deleteTask(i)">
+							<i class="fa fa-trash fa-fw" aria-hidden="true"></i>
+							Löschen
+							</button>
+						</td>
+					</tr>
+				</tbody>
+			</table>
+			<span class="m-3" *ngIf="!storage.tasksList.length">Keine Antworten gefunden</span>
+		</div>
+		<div class="card-footer">
+		<button type="button"
+				class="btn btn-success btn-sm mr-2"
+				title="Neue PIN erstellen"
+				(click)="createTask()">
+			<i class="fas fa-plus fa-fw" aria-hidden="true"></i>
+			Neue PIN erstellen
+		</button>
+		</div>
+	</div>
 </main>
