--- a/power/src/app/fragebogen/home/home.component.html
+++ b/power/src/app/fragebogen/home/home.component.html
@@ -1,5 +1,5 @@
 <!-- landing page -->
-<main class="mainpage mt-4" id="content" tabindex="-1">
+<main class="mainpage" id="content" tabindex="-1">
   <div class="row">
     <div class="col-12 col-lg-6">
       <div class="jumbotron">
