--- a/power/src/app/fragebogen/dashboard/dashboard.component.html
+++ b/power/src/app/fragebogen/dashboard/dashboard.component.html
@@ -1,5 +1,5 @@
 <!-- dashboard page -->
-<main class="mainpage" id="content" tabindex="-1">
+<main class="mainpage p-1 p-lg-3" id="content" tabindex="-1">
   <!-- forms list -->
   <div class="card bg-light">
     <div class="card-header h5">
