--- a/power/src/app/fragebogen/editor/modal-formular/modal-formular.component.html
+++ b/power/src/app/fragebogen/editor/modal-formular/modal-formular.component.html
@@ -106,8 +106,8 @@
                             </textarea>
                         </div>
                         <div class="form-group row m-0 mb-3">
-                            <label for="configPageOrder" class="col-3 col-form-label px-0">Fragenreihenfolge</label>
-                            <div class="col-9 p-0">
+                            <label for="configPageOrder" class="col-12 col-lg-3 col-form-label px-0">Fragenreihenfolge</label>
+                            <div class="col-12 col-lg-9 p-0">
                                 <select class="custom-select"
                                     [(ngModel)]="storage.model.pages[i].questionsOrder"
                                     id="configPageOrder"
