--- a/power/src/app/fragebogen/home/home.component.html
+++ b/power/src/app/fragebogen/home/home.component.html
@@ -1,6 +1,6 @@
 <!-- landing page -->
 <main class="mainpage" id="content" tabindex="-1">
-  <div class="row">
+  <div class="row m-0 mt-3">
     <div class="col-12 col-lg-6">
       <div class="jumbotron">
         <h1 class="display-4">Formular ausfüllen</h1>
@@ -8,8 +8,8 @@
         <hr class="my-4">
         <div class="lead">
           <form #pinFormular="ngForm" (ngSubmit)="submitPIN(pin.value)" class="form-inline">
-            <input type="text" class="form-control mr-2" id="pin" placeholder="Formular PIN" #pin>
-            <button type="submit" class="btn btn-success my-2">Los</button>
+            <input type="text" class="form-control mr-2 w-50" id="pin" placeholder="Formular PIN" #pin>
+            <button type="submit" class="btn btn-success w-25">Los</button>
           </form>
         </div>
       </div>
@@ -36,8 +36,8 @@
     </div>
     <div class="col-12 col-lg-6">
       <div class="jumbotron">
-        <h1 class="display-4">Mitarbeiterportal</h1>
-        <p class="lead">Login für Mitarbeiter der Landesvermessung von Niedersachsen.</p>
+        <h1 class="display-4">Mitarbeiter</h1>
+        <p class="lead">Interner Bereich für die Mitarbeiter der Landesvermessung von Niedersachsen.</p>
         <hr class="my-4">
         <div class="lead">
           <a [routerLink]="['/forms/dashboard']">Zum Mitarbeiterportal</a>
