--- a/power/src/app/fragebogen/details/maketask/maketask.component.html
+++ b/power/src/app/fragebogen/details/maketask/maketask.component.html
@@ -35,7 +35,7 @@
 
             <!-- modal buttons -->
             <div class="modal-footer">
-                <button type="button" class="btn btn-success" title="Änderungen speichern"
+                <button type="button" class="btn btn-success" title="Codes erstellen"
                         (click)="Generate()">
                     Codes erstellen
                 </button>
