--- a/power/src/app/fragebogen/home/home.component.html
+++ b/power/src/app/fragebogen/home/home.component.html
@@ -9,7 +9,7 @@
         <div class="lead">
           <form #pinFormular="ngForm" (ngSubmit)="submitPIN(pin.value)" class="form-inline">
             <input type="text" class="form-control mr-2 w-50" id="pin" placeholder="Formular PIN" #pin>
-            <button type="submit" class="btn btn-success w-25">Los</button>
+            <button type="submit" class="btn btn-success">Los</button>
           </form>
         </div>
       </div>
