--- a/power/src/app/fragebogen/editor/conditions/conditions.component.html
+++ b/power/src/app/fragebogen/editor/conditions/conditions.component.html
@@ -61,7 +61,7 @@
         </div>
 
         <div class="form-group col-4 m-0 pr-0" *ngIf="!(item.operator === 'empty' || item.operator === 'notempty')">
-            <label for="conditionValue{{ i }}" class="sr-only">Wert*</label>
+            <label for="conditionValue{{ i }}" class="sr-only">Wert oder Variabel %7Be1%7D</label>
             <input type="text"
                 class="form-control"
                 [(ngModel)]="item.value"
@@ -70,7 +70,7 @@
                 [class.is-invalid]="!item.value"
                 id="conditionValue{{ i }}"
                 name="conditionValue{{ i }}"
-                placeholder="Wert"
+                placeholder="Wert oder Variabel {e1}"
                 maxlength="200"
                 required>
 
