--- a/power/src/app/fragebogen/dashboard/dashboard.component.html
+++ b/power/src/app/fragebogen/dashboard/dashboard.component.html
@@ -11,6 +11,7 @@
         <thead>
         <tr>
           <th scope="col" class="border-top-0 w-75">Titel</th>
+          <th scope="col" class="border-top-0">Tags</th>
           <th scope="col" class="border-top-0">Erstellt</th>
           <th scope="col" class="border-top-0">Aktualisiert</th>
           <th scope="col" class="border-top-0"></th>
@@ -23,6 +24,7 @@
               {{ form.title }}
             </a>
           </td>
+          <td>{{ form.tags }}</td>
           <td>{{ form.created | date:'dd.MM.yyyy HH:mm' }}</td>
           <td>{{ form.updated | date:'dd.MM.yyyy HH:mm' }}</td>
           <td>
