--- a/power/src/app/bodenrichtwert/bodenrichtwert-karte/bodenrichtwert-karte.component.html
+++ b/power/src/app/bodenrichtwert/bodenrichtwert-karte/bodenrichtwert-karte.component.html
@@ -111,7 +111,7 @@
 
     <mgl-vector-source
       id="geoserver"
-      [tiles]="[baseUrl+'/geoserver/gwc/service/wmts?REQUEST=GetTile&SERVICE=WMTS&VERSION=1.0.0&LAYER=boris:br_bodenrichtwertzonal&STYLE=&TILEMATRIX=EPSG:900913:{z}&TILEMATRIXSET=EPSG:900913&FORMAT=application/vnd.mapbox-vector-tile&TILECOL={x}&TILEROW={y}']"
+      [tiles]="[baseUrl+'/geoserver/gwc/service/wmts?REQUEST=GetTile&SERVICE=WMTS&VERSION=1.0.0&LAYER=boris:br_brzone_flat&STYLE=&TILEMATRIX=EPSG:900913:{z}&TILEMATRIXSET=EPSG:900913&FORMAT=application/vnd.mapbox-vector-tile&TILECOL={x}&TILEROW={y}']"
     >
     </mgl-vector-source>
 
@@ -120,7 +120,7 @@
       id="bauland"
       type="line"
       [source]="'geoserver'"
-      [sourceLayer]="'br_bodenrichtwertzonal'"
+      [sourceLayer]="'br_brzone_flat'"
       [paint]="{
       'line-color': '#c4153a',
       'line-width': {
@@ -130,7 +130,7 @@
         'stops' : [[11,0],[13,1]]
       }
     }"
-      [filter]="['all',['==', 'entwicklungszustand', 'B'],['==','stichtag',stichtag]]"
+      [filter]="['all',['==', 'entw', 'B'],['==','stag',stichtag]]"
     ></mgl-layer>
 
     <mgl-layer
@@ -138,7 +138,7 @@
       id="landwirtschaft"
       type="line"
       [source]="'geoserver'"
-      [sourceLayer]="'br_bodenrichtwertzonal'"
+      [sourceLayer]="'br_brzone_flat'"
       [paint]="{
       'line-color': '#009900',
       'line-width': {
@@ -148,14 +148,14 @@
         'stops' : [[8,0],[10,1]]
       }
     }"
-      [filter]="['all',['==', 'entwicklungszustand', 'LF'], ['==','stichtag',stichtag]]"
+      [filter]="['all',['==', 'entw', 'LF'], ['==','stag',stichtag]]"
     ></mgl-layer>
 
     <mgl-layer
       id="appto"
       type="symbol"
       [source]="'geoserver'"
-      [sourceLayer]="'br_bodenrichtwertzonal'"
+      [sourceLayer]="'br_brzone_flat'"
       [minzoom]=13
       [paint]="{
       'text-halo-color' : '#fff',
@@ -168,7 +168,7 @@
       'text-size': 12,
       'text-font': ['Klokantech Noto Sans Regular']
     }"
-      [filter]="['all',['==','stichtag',stichtag]]"
+      [filter]="['all',['==','stag',stichtag]]"
     >
     </mgl-layer>
 
